--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "portafolio-nahuel61920",
-  "homepage": "https://Nahuel61920.github.io/portafolio-Nahuel/",
+  "name": "mahendra",
+  "homepage": "https://github.com/mahendra2811/portfolio-mahendra",
   "version": "1.5.0",
   "private": true,
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -47,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "tsparticles": "^2.1.3",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "tsparticles": "^2.1.3"
   }
 }
